revert to one page for JS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
 <!-- My scripts -->
-<script src="static/js/main.js", type="module"></script>
+<script src="static/js/position_buttons.js", type="module"></script>
 
 </head>
 <body>
