split up js files

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
 <!-- My scripts -->
-<script src="static/js/position_buttons.js"></script>
+<script src="static/js/init.js"></script>
+<script src="static/js/utils/utils.js"></script>
+<script src="static/js/utils/storage-handlers.js"></script>
+<script src="static/js/utils/table-fns.js"></script>
+<script src="static/js/utils/excel-export.js"></script>
+<script src="static/js/position-table.js"></script>
+<script src="static/js/main.js"></script>
 
 </head>
 <body>
@@ -29,7 +35,7 @@
 <div id="welcome-page">
     
     <br>
-    <button class="btn" id="load-saved-data-btn">Start from saved data</button>
+    <button class="btn" id="load-saved-data-btn">Load from last saved version</button>
     <button class="btn" id="start-over-btn">Start over</button>
 </div>
 
