--- a/personnel_rolled_up.html
+++ b/personnel_rolled_up.html
@@ -40,7 +40,9 @@
         <!-- Main content -->
         <div class="col-md-10">
  
-            <h3>Select an action item for each current position in your department.</h3>
+            <h3>Below is a list of all FTEs budgeted for your department. Salary and benefits are pre-loaded. 
+                Please select the FTEs for each position which should be kept or made supplemental.
+                Double-click other numbers to edit.</h3>
             
             <!-- Table content inside nested row -->
             <div class="row">
@@ -184,26 +186,13 @@
         </h4>
 
     <br>
-    <strong>Baseline</strong>
-    <br>
     FY25 baseline: <strong><span id="baseline">$250,000</span></strong>
     <br>
     FY26 target: <strong><span id="target">$240,000</span></strong>
     <br>
-    Projected revenue: <strong><span id="baseline-revenue">$ -</span></strong>
+    Current spend: <strong><span id="current">$ - </span></strong>
     <br>
-    Personnel cost: <strong><span id="current">$ - </span></strong>
-    <br>
-    <strong>Total baseline: <span id="baseline_total">$ - </span></strong>
-    <br>
-    <br>
-    <strong>Supplemental</strong>
-    <br>
-    Revenue:  <strong><span id="supp_revenue">$ -</span></strong>
-    <br>
-    Personnel cost: <strong><span id="supps">$ - </span></strong>
-    <br>
-    <strong>Total supplemental: <span id="supp_total">$ - </span></strong>
+    Supplemental: <strong><span id="supps">$ - </span></strong>
 
     </div>
 </div>
