--- a/personnel.html
+++ b/personnel.html
@@ -24,7 +24,7 @@
 <script src="static/js/utils/storage-handlers.js"></script>
 <script src="static/js/utils/table-fns.js"></script>
 <script src="static/js/utils/excel-export.js"></script>
-<script src="static/js/personnel/position-table.js"></script>
+<script src="static/js/personnel/personnel-table.js"></script>
 <script src="static/js/personnel/main.js"></script>
 
 </head>
@@ -51,11 +51,10 @@
                         <tr class="no-choice-yet">
                             <th class="col-employee">Employee Name</th>
                             <th class="col-job">Job Name</th>
-                            <th class="col-salary">FY25 Salary</th>
-                            <th class="fte">FTEs</th>
                             <th class="col-fund">Fund</th>
                             <th class="col-appropriation">Appropriation</th>
                             <th class="col-cost-center">Cost Center</th>
+                            <th class="col-salary">FY25 Salary</th>
                             <th class="col-actions">Action</th>
                         </tr>
                     </thead>
@@ -65,15 +64,14 @@
                         <tr class="no-choice-yet">
                             <td>Jane Doe</td>
                             <td>Assistant Director</td>
-                            <td class="salary" data-salary="100000">$100,000</td>
-                            <td>1.0</td>
                             <td>1000</td>
                             <td>12345</td>
                             <td>654321</td>
+                            <td class="cost salary" cost="100000">$100,000</td>
                             <td>
                                 <div class="action-btns">
                                     <button class="btn btn-delete">DELETE</button>
-                                    <button class="btn btn-supplemental">MAKE SUPPLEMENTAL</button>
+                                    <button class="btn btn-supplemental">SUPPLEMENTAL</button>
                                     <button class="btn btn-carryover">KEEP IN FY26</button>
                                 </div>
                             </td>
@@ -82,15 +80,14 @@
                         <tr class="no-choice-yet">
                             <td>John Doe</td>
                             <td>TASS III</td>
-                            <td class="salary" data-salary="80000">$80,000</td>
-                            <td>1.0</td>
                             <td>1000</td>
                             <td>12345</td>
                             <td>654321</td>
+                            <td class="cost salary" cost="80000">$80,000</td>
                             <td>
-                                <div class="action-btns"></div>
+                                <div class="action-btns">
                                     <button class="btn btn-delete">DELETE</button>
-                                    <button class="btn btn-supplemental">MAKE SUPPLEMENTAL</button>
+                                    <button class="btn btn-supplemental">SUPPLEMENTAL</button>
                                     <button class="btn btn-carryover">KEEP IN FY26</button>
                                 </div>
                             </td>
@@ -99,15 +96,14 @@
                         <tr class="no-choice-yet">
                             <td>Jane Doe</td>
                             <td>Analyst</td>
-                            <td class="salary" data-salary="60000">$60,000</td>
-                            <td>1.0</td>
                             <td>1000</td>
                             <td>12345</td>
                             <td>654321</td>
+                            <td class="cost salary" cost="60000">$60,000</td>
                             <td>
-                                <div class="action-btns"></div>
+                                <div class="action-btns">
                                     <button class="btn btn-delete">DELETE</button>
-                                    <button class="btn btn-supplemental">MAKE SUPPLEMENTAL</button>
+                                    <button class="btn btn-supplemental">SUPPLEMENTAL</button>
                                     <button class="btn btn-carryover">KEEP IN FY26</button>
                                 </div>
                             </td>
@@ -117,15 +113,14 @@
                         <tr class="no-choice-yet">
                             <td>Vacant</td>
                             <td>Administrative Assistant</td>
-                            <td class="salary" data-salary="50000">$50,000</td>
-                            <td>1.0</td>
                             <td>1000</td>
                             <td>12345</td>
                             <td>654321</td>
+                            <td class="cost salary" cost="50000">$50,000</td>
                             <td>
-                                <div class="action-btns"></div>
+                                <div class="action-btns">
                                     <button class="btn btn-delete">DELETE</button>
-                                    <button class="btn btn-supplemental">MAKE SUPPLEMENTAL</button>
+                                    <button class="btn btn-supplemental">SUPPLEMENTAL</button>
                                     <button class="btn btn-carryover">KEEP IN FY26</button>
                                 </div>
                             </td>
@@ -134,15 +129,14 @@
                         <tr class="no-choice-yet">
                             <td>Vacant</td>
                             <td>Analyst II</td>
-                            <td class="salary" data-salary="80000">$80,000</td>
-                            <td>1.0</td>
                             <td>1000</td>
                             <td>12345</td>
                             <td>654321</td>
+                            <td class="cost salary" cost="80000">$80,000</td>
                             <td>
-                                <div class="action-btns"></div>
+                                <div class="action-btns">
                                     <button class="btn btn-delete">DELETE</button>
-                                    <button class="btn btn-supplemental">MAKE SUPPLEMENTAL</button>
+                                    <button class="btn btn-supplemental">SUPPLEMENTAL</button>
                                     <button class="btn btn-carryover">KEEP IN FY26</button>
                                 </div>
                             </td>
@@ -192,18 +186,18 @@
     <br>
     Projected revenue: <strong><span id="baseline-revenue">$ -</span></strong>
     <br>
-    Personnel cost: <strong><span id="current">$ - </span></strong>
+    Personnel cost: <strong><span id="personnel-baseline">$ - </span></strong>
     <br>
-    <strong>Total baseline: <span id="baseline_total">$ - </span></strong>
+    <strong>Total baseline: <span id="baseline-total">$ - </span></strong>
     <br>
     <br>
     <strong>Supplemental</strong>
     <br>
-    Revenue:  <strong><span id="supp_revenue">$ -</span></strong>
+    Revenue:  <strong><span id="supp-revenue">$ -</span></strong>
     <br>
-    Personnel cost: <strong><span id="supps">$ - </span></strong>
+    Personnel cost: <strong><span id="personnel-supp">$ - </span></strong>
     <br>
-    <strong>Total supplemental: <span id="supp_total">$ - </span></strong>
+    <strong>Total supplemental: <span id="supp-total">$ - </span></strong>
 
     </div>
 </div>
