--- a/personnel.html
+++ b/personnel.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Demo Budget Request</title>
+<title>Demo Budget Form</title>
 
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" crossorigin="anonymous">
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-<h1>FY2026 Budget Request Form</h1>
+<h1>FY2026 Budget Form</h1>
 
 <div id="position-page">
 <div class="container-fluid">
@@ -161,7 +161,7 @@
                     <strong>Download Excel</strong>
                 </button>
                 <button class="btn btn-next">
-                    <strong>>> Continue to overtime estimates</strong>
+                    <strong>>> Continue to overtime es</strong>
                 </button>
             </div>
         </div>
