parameterized function to make cells editable

--- a/personnel.html
+++ b/personnel.html
@@ -22,7 +22,6 @@
 <script src="static/js/init.js"></script>
 <script src="static/js/utils/utils.js"></script>
 <script src="static/js/utils/storage-handlers.js"></script>
-<script src="static/js/utils/table-fns.js"></script>
 <script src="static/js/utils/excel-export.js"></script>
 <script src="static/js/personnel/personnel-table.js"></script>
 <script src="static/js/personnel/main.js"></script>
@@ -67,7 +66,7 @@
                             <td>1000</td>
                             <td>12345</td>
                             <td>654321</td>
-                            <td class="cost salary" cost="100000">$100,000</td>
+                            <td class="cost salary" value="100000">$100,000</td>
                             <td>
                                 <div class="action-btns">
                                     <button class="btn btn-delete">DELETE</button>
@@ -83,7 +82,7 @@
                             <td>1000</td>
                             <td>12345</td>
                             <td>654321</td>
-                            <td class="cost salary" cost="80000">$80,000</td>
+                            <td class="cost salary" value="80000">$80,000</td>
                             <td>
                                 <div class="action-btns">
                                     <button class="btn btn-delete">DELETE</button>
@@ -99,7 +98,7 @@
                             <td>1000</td>
                             <td>12345</td>
                             <td>654321</td>
-                            <td class="cost salary" cost="60000">$60,000</td>
+                            <td class="cost salary" value="60000">$60,000</td>
                             <td>
                                 <div class="action-btns">
                                     <button class="btn btn-delete">DELETE</button>
@@ -116,7 +115,7 @@
                             <td>1000</td>
                             <td>12345</td>
                             <td>654321</td>
-                            <td class="cost salary" cost="50000">$50,000</td>
+                            <td class="cost salary" value="50000">$50,000</td>
                             <td>
                                 <div class="action-btns">
                                     <button class="btn btn-delete">DELETE</button>
@@ -132,7 +131,7 @@
                             <td>1000</td>
                             <td>12345</td>
                             <td>654321</td>
-                            <td class="cost salary" cost="80000">$80,000</td>
+                            <td class="cost salary" value="80000">$80,000</td>
                             <td>
                                 <div class="action-btns">
                                     <button class="btn btn-delete">DELETE</button>
@@ -161,7 +160,7 @@
                     <strong>Download Excel</strong>
                 </button>
                 <button class="btn btn-next">
-                    <strong>>> Continue to overtime es</strong>
+                    <strong>>> Continue to overtime estimates</strong>
                 </button>
             </div>
         </div>
