--- a/rollup.html
+++ b/rollup.html
@@ -40,7 +40,8 @@
         <!-- Main content -->
         <div class="col-md-10">
  
-            <h3>Select an action item for each current position in your department.</h3>
+            <h3>For each job in your department, select the service and request the number
+                of baseline and supplemental FTEs.</h3>
             
             <!-- Table content inside nested row -->
             <div class="row">
@@ -50,11 +51,12 @@
                     <thead class="thead-dark">
                         <tr class="no-choice-yet">
                             <th class="col-job">Job Name</th>
-                            <th class="col-service">Service</th>
                             <th class="col-account">Acount String</th>
+                            <th class="col-service">Service</th>
+                            <th class="last-year-budgeted-ftes">Current FTEs</th>
                             <th class="col-baseline-ftes">Baseline FTEs</th>
                             <th class="col-supp-ftes">Supplemental FTEs</th>
-                            <th class="col-avg-salary">Average Salary</th>
+                            <th class="col-avg-salary">Average FY25 Salary</th>
                             <th class="col-total">Total Cost (Baseline)</th>
                             <th class="col-total">Total Cost (Supplementary)</th>
                             <!-- <th class="col-action">Action</th> -->
@@ -65,6 +67,13 @@
                         <tr class="no-choice-yet">
                             <td>Deputy Counsel</td>
                             <td>
+                                <span class="fund-string">1000</span>-<span class="approp-string">29320</span>-<span class="cc-string">320010</span> 
+                                <button type="button" class="btn btn-edit" data-toggle="modal" data-target="#account-string-modal">
+                                    <!-- <i class="fas fa-info-circle"></i> -->
+                                    Edit
+                                </button> 
+                            </td> 
+                            <td>
                                 <select name="service" id="service">
                                     <option value="default"></option>
                                     <option value="Appeals">Appeals</option>
@@ -72,21 +81,16 @@
                                     <option value="Lobbying">Lobbying</option>
                                 </select>
                             </td>
-                            <td>
-                                <span class="fund-string">1000</span> -
-                                <span class="approp-string">12345</span> -
-                                <span class="cc-string">654321</span> 
-                                <button type="button" class="btn btn-edit" data-toggle="modal" data-target="#account-string-modal">
-                                    <!-- <i class="fas fa-info-circle"></i> -->
-                                    Edit
-                                </button>
-                                  
-                            </td> 
-                            <td value="1">1</td>
-                            <td value="0">0</td>
+                            <td class="ftes-current" value="1">1</td>
+                            <td class="ftes ftes-baseline" value="0">0</td>
+                            <td class="ftes ftes-supp" value="0">0</td>
                             <td class="cost salary" value="150000">$150,000</td>
-                            <td class="cost keep total-baseline" value=""></td>
-                            <td class="cost supp total-supp" value=""></td>
+                            <td class="cost total-baseline" value="">
+                                <!-- <button type="button" class="btn btn-edit" data-toggle="modal" data-target="#calculations">
+                                    ?
+                                </button>  -->
+                            </td>
+                            <td class="cost total-supp" value=""></td>
                             <!-- <td>
                                 <div class="action">
                                     <button class="btn confirm-btn">Confirm</button>
@@ -103,18 +107,18 @@
     <!-- Buttons inside nested row -->
     <div class="row">
         <div class="col-md-12">
-            <div class="new-row">
+            <!-- <div class="new-row">
                 <button class="btn btn-add">+ ADD NEW POSITION</button>
-            </div>
+            </div> -->
             <div class="next-button-row">
-                <button class="btn btn-save" id="save">
+                <!-- <button class="btn btn-save" id="save">
                     <strong>Save progress</strong>
                 </button>
                 <button class="btn btn-download" id="XLSX-download">
                     <strong>Download Excel</strong>
-                </button>
+                </button>  -->
                 <button class="btn btn-next">
-                    <strong>>> Continue to overtime estimates</strong>
+                    <strong>>> Continue to non-personnel</strong>
                 </button>
             </div>
         </div>
@@ -133,9 +137,9 @@
     <br>
     <strong>Baseline</strong>
     <br>
-    FY25 baseline: <strong><span id="baseline">$250,000</span></strong>
+    FY25 baseline: <strong><span id="baseline">$1,100,000.00</span></strong>
     <br>
-    FY26 target: <strong><span id="target">$240,000</span></strong>
+    FY26 target: <strong><span id="target">$1,000,000.00</span></strong>
     <br>
     Projected revenue: <strong><span id="baseline-revenue">$ -</span></strong>
     <br>
@@ -151,7 +155,8 @@
     Personnel cost: <strong><span id="personnel-supp">$ - </span></strong>
     <br>
     <strong>Total supplemental: <span id="supp-total">$ - </span></strong>
-
+<br>
+<br>
     </div>
 </div>
 </div>
