got rollup to work

--- a/overtime.html
+++ b/overtime.html
@@ -39,7 +39,7 @@
         <!-- Main content -->
         <div class="col-md-10">
  
-            <h3>Select an action item for each current position in your department.</h3>
+            <h3>Select an action item for each non-personnel line item in your department.</h3>
             
             <!-- Table content inside nested row -->
             <div class="row">
@@ -49,7 +49,6 @@
                     <thead class="thead-dark">
                         <tr class="no-choice-yet">
                             <th class="col-employee">Employee Name</th>
-                            <th class="col-job">Job Name</th>
                             <th class="col-fund">Fund</th>
                             <th class="col-appropriation">Appropriation</th>
                             <th class="col-cost-center">Cost Center</th>
@@ -153,19 +152,14 @@
                 <button class="btn btn-add">+ ADD NEW POSITION</button>
             </div>
             <div class="next-button-row">
-                <!-- <button class="btn btn-save" id="save">
+                <button class="btn btn-save" id="save">
                     <strong>Save progress</strong>
-                </button> -->
+                </button>
                 <button class="btn btn-download" id="XLSX-download">
                     <strong>Download Excel</strong>
                 </button>
-                <a href="rollup.html">
-                    <button class="btn btn-last">
-                        <strong><< Previous</strong>
-                    </button>
-                </a>
                 <button class="btn btn-next">
-                    <strong>Continue >></strong>
+                    <strong>>> Continue to overtime estimates</strong>
                 </button>
             </div>
         </div>
@@ -184,9 +178,9 @@
     <br>
     <strong>Baseline</strong>
     <br>
-    FY25 baseline: <strong><span id="baseline">$2,200,000</span></strong>
+    FY25 baseline: <strong><span id="baseline">$250,000</span></strong>
     <br>
-    FY26 target: <strong><span id="target">$2,000,000</span></strong>
+    FY26 target: <strong><span id="target">$240,000</span></strong>
     <br>
     Projected revenue: <strong><span id="baseline-revenue">$ -</span></strong>
     <br>
