--- a/rollup.html
+++ b/rollup.html
@@ -47,22 +47,24 @@
             <div class="row">
                 <div class="col-md-12">
             <div class="table-container">
-                <table class="table table-bordered mt-3" id="employee-table">
+                <table class="table table-bordered mt-3" id="rollup-table">
                     <thead class="thead-dark">
                         <tr class="no-choice-yet">
                             <th class="col-job">Job Name</th>
                             <th class="col-account">Acount String</th>
                             <th class="col-service">Service</th>
-                            <th class="last-year-budgeted-ftes">Current FTEs</th>
+                            <th class="last-year-budgeted-ftes">Current FTEs (FY25)</th>
                             <th class="col-baseline-ftes">Baseline FTEs</th>
                             <th class="col-supp-ftes">Supplemental FTEs</th>
                             <th class="col-avg-salary">Average FY25 Salary</th>
-                            <th class="col-total">Total Cost (Baseline)</th>
+                            <th class="col-total">Total Cost (Baseline)
+                            </th>
                             <th class="col-total">Total Cost (Supplementary)</th>
                             <!-- <th class="col-action">Action</th> -->
                         </tr>
                     </thead>
                     <tbody>
+
                         <!-- Example row with sample data -->
                         <tr class="no-choice-yet">
                             <td>Deputy Counsel</td>
@@ -74,8 +76,8 @@
                                 </button> 
                             </td> 
                             <td>
-                                <select name="service" id="service">
-                                    <option value="default"></option>
+                                <select name="service" class="service">
+                                    <option value=""></option>
                                     <option value="Appeals">Appeals</option>
                                     <option value="FOIA">FOIA</option>
                                     <option value="Lobbying">Lobbying</option>
@@ -85,12 +87,103 @@
                             <td class="ftes ftes-baseline" value="0">0</td>
                             <td class="ftes ftes-supp" value="0">0</td>
                             <td class="cost salary" value="150000">$150,000</td>
-                            <td class="cost total-baseline" value="">
-                                <!-- <button type="button" class="btn btn-edit" data-toggle="modal" data-target="#calculations">
-                                    ?
-                                </button>  -->
+                            <td class="total-baseline">
+                                <span class="cost calculated-total-baseline" value="">$ -</span>
+                                <button type="button" class="icon-button btn-see-calcs" data-toggle="modal" data-target="#calculations-modal">
+                                    <i class="fas fa-question-circle"></i>
+                                </button> 
                             </td>
-                            <td class="cost total-supp" value=""></td>
+                            <td class="cost total-supp">
+                                <span class="cost calculated-total-supp" value="">$ -</span>
+                                <button type="button" class="icon-button btn-see-calcs" data-toggle="modal" data-target="#calculations-modal">
+                                    <i class="fas fa-question-circle"></i>
+                                </button> 
+                            </td>
+                            <!-- <td>
+                                <div class="action">
+                                    <button class="btn confirm-btn">Confirm</button>
+                                </div>
+                            </td> -->
+                        </tr>
+
+
+                        <!-- Example row with sample data -->
+                        <tr class="no-choice-yet">
+                            <td>Legal Secretary</td>
+                            <td>
+                                <span class="fund-string">1000</span>-<span class="approp-string">29320</span>-<span class="cc-string">320010</span> 
+                                <button type="button" class="btn btn-edit" data-toggle="modal" data-target="#account-string-modal">
+                                    <!-- <i class="fas fa-info-circle"></i> -->
+                                    Edit
+                                </button> 
+                            </td> 
+                            <td>
+                                <select name="service" class="service">
+                                    <option value=""></option>
+                                    <option value="Appeals">Appeals</option>
+                                    <option value="FOIA">FOIA</option>
+                                    <option value="Lobbying">Lobbying</option>
+                                </select>
+                            </td>
+                            <td class="ftes-current" value="5">5</td>
+                            <td class="ftes ftes-baseline" value="0">0</td>
+                            <td class="ftes ftes-supp" value="0">0</td>
+                            <td class="cost salary" value="55000">$55,000</td>
+                            <td class="total-baseline">
+                                <span class="cost calculated-total-baseline" value="">$ -</span>
+                                <button type="button" class="icon-button btn-see-calcs" data-toggle="modal" data-target="#calculations-modal">
+                                    <i class="fas fa-question-circle"></i>
+                                </button> 
+                            </td>
+                            <td class="cost total-supp">
+                                <span class="cost calculated-total-supp" value="">$ -</span>
+                                <button type="button" class="icon-button btn-see-calcs" data-toggle="modal" data-target="#calculations-modal">
+                                    <i class="fas fa-question-circle"></i>
+                                </button> 
+                            </td>
+                            <!-- <td>
+                                <div class="action">
+                                    <button class="btn confirm-btn">Confirm</button>
+                                </div>
+                            </td> -->
+                        </tr>
+
+
+
+                        <!-- Example row with sample data -->
+                        <tr class="no-choice-yet">
+                            <td>Assistant Counsel</td>
+                            <td>
+                                <span class="fund-string">1000</span>-<span class="approp-string">29320</span>-<span class="cc-string">320010</span> 
+                                <button type="button" class="btn btn-edit" data-toggle="modal" data-target="#account-string-modal">
+                                    <!-- <i class="fas fa-info-circle"></i> -->
+                                    Edit
+                                </button> 
+                            </td> 
+                            <td>
+                                <select name="service" class="service">
+                                    <option value=""></option>
+                                    <option value="Appeals">Appeals</option>
+                                    <option value="FOIA">FOIA</option>
+                                    <option value="Lobbying">Lobbying</option>
+                                </select>
+                            </td>
+                            <td class="ftes-current" value="10">10</td>
+                            <td class="ftes ftes-baseline" value="0">0</td>
+                            <td class="ftes ftes-supp" value="0">0</td>
+                            <td class="cost salary" value="80000">$80,000</td>
+                            <td class="total-baseline">
+                                <span class="cost calculated-total-baseline" value="">$ -</span>
+                                <button type="button" class="icon-button btn-see-calcs" data-toggle="modal" data-target="#calculations-modal">
+                                    <i class="fas fa-question-circle"></i>
+                                </button> 
+                            </td>
+                            <td class="cost total-supp">
+                                <span class="cost calculated-total-supp" value="">$ -</span>
+                                <button type="button" class="icon-button btn-see-calcs" data-toggle="modal" data-target="#calculations-modal">
+                                    <i class="fas fa-question-circle"></i>
+                                </button> 
+                            </td>
                             <!-- <td>
                                 <div class="action">
                                     <button class="btn confirm-btn">Confirm</button>
@@ -117,13 +210,12 @@
                 <button class="btn btn-download" id="XLSX-download">
                     <strong>Download Excel</strong>
                 </button>  -->
-                <button class="btn btn-next">
-                    <strong>>> Continue to non-personnel</strong>
+                <button class="btn btn-next" id="continue-btn">
+                    <strong>>> Continue</strong>
                 </button>
             </div>
         </div>
     </div>
-
 </div>
 
 <!-- Sidebar Content -->
@@ -137,9 +229,9 @@
     <br>
     <strong>Baseline</strong>
     <br>
-    FY25 baseline: <strong><span id="baseline">$1,100,000.00</span></strong>
+    FY25 baseline: <strong><span id="baseline" value="2200000">$2,200,000.00</span></strong>
     <br>
-    FY26 target: <strong><span id="target">$1,000,000.00</span></strong>
+    FY26 target: <strong><span id="target" value="2000000">$2,000,000.00</span></strong>
     <br>
     Projected revenue: <strong><span id="baseline-revenue">$ -</span></strong>
     <br>
@@ -209,6 +301,28 @@
     </div>
   </div>
 
+<!-- Modal for salary calculations -->
+<div class="modal fade" id="calculations-modal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="infoModalLabel">Total cost calculations</h5>
+          <button type="button" id="modal-close-x" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            Total cost = FTEs &times; average base salary &times; (1 + cost of living adjustment rate) &times; (1 + step up/merit increase rate) &times; (1 + fringe benefit rate)  
+            <br>
+            <br>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" id="modal-done-btn" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 </body>
