--- a/rollup.html
+++ b/rollup.html
@@ -237,6 +237,8 @@
     <br>
     Personnel cost: <strong><span id="personnel-baseline">$ - </span></strong>
     <br>
+    Non-personnel cost: <strong><span id="nonpersonnel-baseline">$ - </span></strong>
+    <br>
     <strong>Total baseline: <span id="baseline-total">$ - </span></strong>
     <br>
     <br>
@@ -245,6 +247,8 @@
     Revenue:  <strong><span id="supp-revenue">$ -</span></strong>
     <br>
     Personnel cost: <strong><span id="personnel-supp">$ - </span></strong>
+    <br>
+    Non-personnel cost: <strong><span id="nonpersonnel-supp">$ - </span></strong>
     <br>
     <strong>Total supplemental: <span id="supp-total">$ - </span></strong>
 <br>
