added revenue page

--- a/new_initiatives.html
+++ b/new_initiatives.html
@@ -76,9 +76,11 @@
                     <strong><< Previous</strong>
                 </button>
             </a>
-            <button class="btn btn-next">
-                <strong>Confirm and continue >></strong>
-            </button>
+            <a href="revenue.html">
+                <button class="btn btn-next">
+                    <strong>Confirm and continue >></strong>
+                </button>
+            </a>
         </div>
     </div>
 </div>
