added a question to the form

--- a/new_initiatives.html
+++ b/new_initiatives.html
@@ -103,7 +103,13 @@
                 </div>
                 <br>
                 <div id="explanation">
-                    <label for="init-explanation">Explanation:</label>
+                    <label for="init-explanation">What is this initiative?</label>
+                    <br>
+                    <textarea name="init-explanation" rows="5" cols="50" id="init-explanation" required></textarea>
+                  </div>
+                  <br>
+                  <div id="impact">
+                    <label for="init-explanation">Explain the initiative's potential impact.</label>
                     <br>
                     <textarea name="init-explanation" rows="5" cols="50" id="init-explanation" required></textarea>
                   </div>
