--- a/pages/02_new_initiatives.html
+++ b/pages/02_new_initiatives.html
@@ -8,7 +8,9 @@
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" crossorigin="anonymous">
 <!-- CSS -->
-<link rel="stylesheet" href="static/style.css">
+<link rel="stylesheet" href="../css/common.css">
+<link rel="stylesheet" href="../css/02_new_initiatives.css">
+
 
 <!-- Bootstrap JS and its dependencies (jQuery & Popper.js) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
@@ -16,8 +18,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
 <!-- My scripts -->
-<script src="static/js/utils/utils.js"></script>
-<script src="static/js/initiatives/main.js"></script>
+<script src="../js/pages/02_new_initiatives/main.js"></script>
+<script src="../js/utils/utils.js"></script>
 
 </head>
 <body>
@@ -38,7 +40,7 @@
             <button class="btn btn-yes" id="new-inits" data-toggle="modal" data-target="#new-init-modal">
                 Yes
             </button>
-        <a href="revenue.html">
+        <a href="../pages/03_revenue.html">
             <button class="btn btn-no" id="no-new-inits">
                 No
             </button>
