--- a/pages/04_personnel.html
+++ b/pages/04_personnel.html
@@ -7,9 +7,11 @@
 
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" crossorigin="anonymous">
-<!-- CSS -->
-<link rel="stylesheet" href="static/style.css">
+<!-- Font awesome (for the info and ? buttons) -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+<!-- CSS -->
+<link rel="stylesheet" href="../css/common.css">
+<link rel="stylesheet" href="../css/04_personnel.css">
 
 <!-- Bootstrap JS and its dependencies (jQuery & Popper.js) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
@@ -20,12 +22,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
 <!-- My scripts -->
-<script src="static/js/init.js"></script>
-<script src="static/js/utils/utils.js"></script>
-<script src="static/js/utils/storage-handlers.js"></script>
-<script src="static/js/utils/excel-export.js"></script>
-<script src="static/js/rollup/rollup-helpers.js"></script>
-<script src="static/js/rollup/main.js"></script>
+<script src="../js/init.js"></script>
+<script src="../js/utils/utils.js"></script>
+<script src="../js/utils/storage-handlers.js"></script>
+<script src="../js/utils/excel-export.js"></script>
+<script src="../js/pages/04_personnel/rollup-helpers.js"></script>
+<script src="../js/pages/04_personnel/main.js"></script>
 
 </head>
 <body>
