--- a/pages/05_nonpersonnel.html
+++ b/pages/05_nonpersonnel.html
@@ -8,7 +8,7 @@
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" crossorigin="anonymous">
 <!-- CSS -->
-<link rel="stylesheet" href="static/style.css">
+<link rel="stylesheet" href="../css/common.css">
 
 <!-- Bootstrap JS and its dependencies (jQuery & Popper.js) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
@@ -19,12 +19,12 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
 <!-- My scripts -->
-<script src="static/js/init.js"></script>
-<script src="static/js/utils/utils.js"></script>
-<script src="static/js/utils/storage-handlers.js"></script>
-<script src="static/js/utils/excel-export.js"></script>
-<script src="static/js/personnel/nonpersonnel-table.js"></script>
-<script src="static/js/personnel/main.js"></script>
+<script src="../js/init.js"></script>
+<script src="../js/utils/utils.js"></script>
+<script src="../js/utils/storage-handlers.js"></script>
+<script src="../js/utils/excel-export.js"></script>
+<script src="../js/pages/05_nonpersonnel/nonpersonnel-table.js"></script>
+<script src="../js/pages/05_nonpersonnel/main.js"></script>
 
 </head>
 <body>
@@ -119,7 +119,7 @@
                 <button class="btn btn-download" id="XLSX-download">
                     <strong>Download Excel</strong>
                 </button>
-                <a href="rollup.html">
+                <a href="04_personnel.html">
                     <button class="btn btn-last">
                         <strong><< Previous</strong>
                     </button>
