--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <br>
 <br>
 
+<!-- Welcome page buttons -->
 <div id="welcome-page">
     <a>
         <button class="btn step" id="step-upload">
@@ -70,19 +71,61 @@
     </a>
 </div>
 
+<!-- Space for an initial prompt and response buttons -->
 <div id="prompt-div">
-    <h3 id="prompt">Do you have any new initiatives for FY26?</h3>
+    <h3 id="prompt"></h3>
     <br>
-        <button class="btn btn-yes" id="option1" data-toggle="modal" data-target="#new-init-modal">
-            Yes
-        </button>
+        <button class="btn" id="option1" data-toggle="modal" data-target="#new-init-modal"></button>
     <a href="../pages/03_revenue.html">
-        <button class="btn btn-no" id="option2">
-            No
-        </button>
+        <button class="btn" id="option2"></button>
     </a>
 </div>
 
+
+<!-- Modal for new initiatives -->
+<div class="modal fade" id="form-modal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="infoModalLabel">Add new initiative</h5>
+          <button type="button" id="modal-close-x" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <form id="new-init-form">
+                <div id="name-textbox">
+                    <label for="init-name">Initiative Name:</label>
+                  <input type="text" id="init-name" required>
+                </div>
+                <br>
+                <div id="explanation">
+                    <label for="init-explanation">What is this initiative?</label>
+                    <br>
+                    <textarea name="init-explanation" rows="5" cols="50" id="init-explanation" required></textarea>
+                  </div>
+                  <br>
+                  <div id="impact">
+                    <label for="init-explanation">Explain the initiative's potential impact.</label>
+                    <br>
+                    <textarea name="init-explanation" rows="5" cols="50" id="init-explanation" required></textarea>
+                  </div>
+                  <br>
+                  <div id="request">
+                    <label for="init-request">Requested amount (numbers only):</label>
+                    <br>
+                    <input type="number" name="init-request" id="init-request" min="0" required>
+                  </div> 
+                  <br>
+                <div id="submit-btn-container">
+                    <input class="btn btn-submit" type="submit" value="Submit">
+                </div>
+            </form>
+
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 </body>
