updated page state

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="js/components/welcome/welcome.css">
 <link rel="stylesheet" href="js/components/header/header.css">
 <link rel="stylesheet" href="js/components/prompt/prompt.css">
+<link rel="stylesheet" href="js/components/nav_buttons/nav_buttons.css">
 
 <!-- Bootstrap JS and its dependencies (jQuery & Popper.js) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
@@ -125,8 +126,22 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
 
+<!-- Navigation buttons -->
+<div id="nav-btns">
+    <br>
+    <br>
+    <!-- <button class="btn btn-download" id="XLSX-download">
+        <strong>Download Excel</strong>
+    </button> -->
+    <button class="btn" id="btn-last">
+        <strong><< Previous</strong>
+    </button>
+    <button class="btn" id="btn-next">
+        <strong>Continue >></strong>
+    </button>
+</div>
 
 </body>
 </html>
