--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" href="js/components/prompt/prompt.css">
 <link rel="stylesheet" href="js/components/nav_buttons/nav_buttons.css">
 <link rel="stylesheet" href="js/components/modal/modal.css">
+<link rel="stylesheet" href="js/components/form/form.css">
 
 <!-- Bootstrap JS and its dependencies (jQuery & Popper.js) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
@@ -92,9 +93,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
-            <form id="form-in-modal">
-            </form>
+        <div class="modal-body" id="modal-body">
         </div>
       </div>
     </div>
