modularized more, but need to fix nav button functions

--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
                 </div>
             </div>
 
+            <!-- Add new row button -->
+            <div class="row">
+                <div id='add-btn-div'>
+                    <button class="btn btn-add" id="add-btn"></button>
+                </div>
+            </div>
+
             <!-- Navigation buttons -->
             <div class="row">
                 <div class="col-md-12">
