--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="js/components/nav_buttons/nav_buttons.css">
 <link rel="stylesheet" href="js/components/modal/modal.css">
 <link rel="stylesheet" href="js/components/form/form.css">
+<link rel="stylesheet" href="js/components/sidebar/sidebar.css">
 
 <!-- Bootstrap JS and its dependencies (jQuery & Popper.js) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
@@ -131,7 +132,15 @@
 
 <!-- Sidebar -->
 <div class="col-md-2" id="sidebar-panel">
-    <div class="sidebar">
+    <div class="sidebar-content">
+        <br>
+        <h4 id="sidebar-title"></h4>
+        <br>
+        <h6 id="section-header"><strong>Baseline</strong></h6>
+        <div id="baseline-stats"></div>
+        <br>
+        <h6 id="section-header"><strong>Supplemental</strong></h6>
+        <div id="supp-stats"></div>
     </div>
 </div>
 
