--- a/index.html
+++ b/index.html
@@ -94,10 +94,12 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="table-container">
-                        <table class="table table-bordered mt-3" id="main-table">
-                            <thead class="thead-dark"></thead>
-                            <tbody></tbody>
-                        </table>
+                        <!-- <form id="table-form"> -->
+                            <table class="table table-bordered mt-3" id="main-table">
+                                <thead class="thead-dark"></thead>
+                                <tbody></tbody>
+                            </table>
+                        <!-- </form> -->
                     </div>
                 </div>
             </div>
