--- a/index.html
+++ b/index.html
@@ -140,23 +140,23 @@
                     <div class='sidebar-stat-line' id="target">
                         <span class="stat-label">FY26 target:</span> 
                         <span class="stat"></span>
-                    <div>
+                    </div>
                     <div class='sidebar-stat-line' id="baseline-revenue">
                         <span class="stat-label">Projected revenue:</span> 
                         <span class="stat"></span>
-                    <div>
+                    </div>
                     <div class='sidebar-stat-line' id="baseline-personnel">
                         <span class="stat-label">Personnel cost:</span> 
                         <span class="stat"></span>
-                    <div>
+                    </div>
                     <div class='sidebar-stat-line' id="baseline-nonpersonnel">
                         <span class="stat-label">Non-personnel cost:</span> 
                         <span class="stat"></span>
-                    <div>
+                    </div>
                     <div class='sidebar-stat-line' id="baseline-total">
                         <span class="stat-label">Total baseline:</span> 
                         <span class="stat"></span>
-                    <div>
+                    </div>
                 </div>
                 <br>
                 <h6 id="section-header"><strong>Supplemental</strong></h6>
@@ -164,16 +164,20 @@
                     <div class='sidebar-stat-line' id="supp-revenue">
                         <span class="stat-label">Revenue:</span> 
                         <span class="stat"></span>
+                    </div>
                     <div class='sidebar-stat-line' id="supp-personnel">
                         <span class="stat-label">Personnel cost:</span> 
                         <span class="stat"></span>
+                    </div>
                     <div class='sidebar-stat-line' id="supp-nonpersonnel">
                         <span class="stat-label">Non-personnel cost:</span> 
                         <span class="stat"></span>
+                    </div>
                     <div class='sidebar-stat-line' id="supp-total">
                         <span class="stat-label">Total supplemental:</span> 
                         <span class="stat"></span>
                     </div>
+                </div>
             </div>
         </div>
     </div>
