added a Body component with a clearAll function to initialize each page view

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!-- common CSS -->
 <link rel="stylesheet" href="css/common.css">
 <!-- Component CSS -->
+<link rel="stylesheet" href="js/components/body/body.css">
 <link rel="stylesheet" href="js/components/welcome/welcome.css">
 <link rel="stylesheet" href="js/components/header/header.css">
 <link rel="stylesheet" href="js/components/prompt/prompt.css">
