--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" crossorigin="anonymous">
+<!-- Google fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
 <!-- common CSS -->
 <link rel="stylesheet" href="css/common.css">
 <!-- Component CSS -->
