fixed bug with modal submit button

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
             1. Upload your Excel data
         </button>
         <button class="btn step" id="step-revenue">
-            2. Baseline request
+            2. Complete your baseline request
         </button>
         <button class="btn step" id="step-initiatives">
-            3. Name any new initiatives
+            3. Propose new initiatives
         </button>
         <button class="btn step" id="step-finish">
-            4. Confirm and finish
+            4. Review and download submission
         </button>
     </div>
 
