initialized summary page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
     </div>
 
     <!-- Summary page accordion -->
-    <div class="accordion" id="summary-accordion"></div>
+    <div id='accordion-div'>
+        <h3 id="accordion-baseline-title">Baseline</h3>
+        <div class="accordion" id="summary-accordion"></div>
+    </div>
 
     <!-- Space for an initial prompt and response buttons -->
     <div id="prompt-div">
