#23 deleted outdated json data (replaced by Excel); added upload input for excel sheet

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <link rel="stylesheet" href="js/components/form/form.css">
 <link rel="stylesheet" href="js/components/sidebar/sidebar.css">
 <link rel="stylesheet" href="js/components/table/table.css">
+<link rel="stylesheet" href="js/components/file_upload/file_upload.css">
 
 <!-- Bootstrap JS and its dependencies (jQuery & Popper.js) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
@@ -75,6 +76,9 @@
     <div id="prompt-div">
         <h3 id="prompt"></h3>
         <br>
+        <!-- File upload -->
+        <input type="file" id="file-input" accept=".xls,.xlsx" />
+        <!-- Prompt buttons -->
         <button class="btn" id="option1"></button>
         <button class="btn" id="option2"></button>
     </div>
