Fix unescapted characters in HTML

--- a/src/index.html
+++ b/src/index.html
@@ -84,10 +84,10 @@
         <div class="col-md-12">
             <div id="nav-btns">
                 <button class="btn" id="btn-last">
-                    <strong><< Previous</strong>
+                    <strong>&lt;&lt; Previous</strong>
                 </button>
                 <button class="btn" id="btn-next">
-                    <strong>Continue >></strong>
+                    <strong>Continue &gt;&gt;</strong>
                 </button>
             </div>
         </div>
