#17 added a placeholder for the supplementals in the summary view.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,14 @@
 
     <!-- Summary page accordion -->
     <div id='accordion-div'>
-        <h3 id="accordion-baseline-title">Baseline</h3>
-        <div class="accordion" id="summary-accordion"></div>
+        <div id='baseline-accordion'>
+            <h3 id="baseline-title" class="accordion-title">Baseline</h3>
+            <div class="accordion summary-accordion"></div>
+        </div>
+        <div id="supp-accordion">
+            <h3 id="supp-title" class="accordion-title">Suplemental</h3>
+            <div class="accordion summary-accordion"></div>
+        </div>
     </div>
 
     <!-- Space for an initial prompt and response buttons -->
