#16 adjusting sidebar to collapse expenses

--- a/index.html
+++ b/index.html
@@ -155,15 +155,11 @@
         <h6 id="section-header"><strong>Supplemental</strong></h6>
         <div id="supp-stats">
             <div class='sidebar-stat-line' id="supp-revenue">
-                <span class="stat-label">Revenue:</span> 
+                <span class="stat-label">Estimated Revenue:</span> 
                 <span class="stat"></span>
             </div>
-            <div class='sidebar-stat-line' id="supp-personnel">
-                <span class="stat-label">Personnel cost:</span> 
-                <span class="stat"></span>
-            </div>
-            <div class='sidebar-stat-line' id="supp-nonpersonnel">
-                <span class="stat-label">Non-personnel cost:</span> 
+            <div class='sidebar-stat-line' id="supp-expenses">
+                <span class="stat-label">Esimated Expenses:</span> 
                 <span class="stat"></span>
             </div>
             <div class='sidebar-stat-line' id="supp-total">
