--- a/src/index.html
+++ b/src/index.html
@@ -137,11 +137,11 @@
         <h6 id="section-header"><strong>Supplemental</strong></h6>
         <div id="supp-stats">
             <div class='sidebar-stat-line' id="supp-revenue">
-                <span class="stat-label">Estimated Revenue:</span> 
+                <span class="stat-label">Estimated revenue:</span> 
                 <span class="stat"></span>
             </div>
             <div class='sidebar-stat-line' id="supp-expenses">
-                <span class="stat-label">Esimated Expenses:</span> 
+                <span class="stat-label">Esimated expenses:</span> 
                 <span class="stat"></span>
             </div>
             <div class='sidebar-stat-line' id="supp-total">
